objects/GEMS_Characteristic__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GEMS_Characteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Characteristics</relationshipLabel>
        <relationshipName>GEMS_Characteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Characteristic_Code__c</fullName>
        <formula>Corp_Characteristic_Code__r.CORP_Characteristic_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Characteristic Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corp_Characteristic_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corp Characteristic Code</label>
        <referenceTo>GEMS_Corp_Characteristic_Code__c</referenceTo>
        <relationshipName>GEMS_Characteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <label>Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Billing/Product</fullName>
                </value>
                <value>
                    <fullName>Billing/Reporting</fullName>
                </value>
                <value>
                    <fullName>Billing/Mailing</fullName>
                </value>
                <value>
                    <fullName>Billing/Product/Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GEMS Characteristic</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Characteristic No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Characteristics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_Record_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( IsNew__c = false ,NOT($Profile.Name=&apos;System Administrator&apos;),NOT($Profile.Name=&apos;Integration Profile&apos;),NOT(ISCHANGED( IsUpdated__c)))</errorConditionFormula>
        <errorMessage>Cannot Change Old Characteristics</errorMessage>
    </validationRules>
</CustomObject>